--- a/Assignment1/src/View/LogInView.fxml
+++ b/Assignment1/src/View/LogInView.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="211.0" prefWidth="321.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.LogInController">
    <children>
       <HBox prefHeight="278.0" prefWidth="322.0">
@@ -22,12 +21,12 @@
       </HBox>
       <HBox prefHeight="315.0" prefWidth="600.0">
          <children>
-            <TextField promptText="User id">
+            <TextField fx:id="UserIdField" promptText="User id">
                <HBox.margin>
                   <Insets left="50.0" />
                </HBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" text="Log in">
+            <Button fx:id="LogInButton" mnemonicParsing="false" onAction="#onButtonClicked" text="Log in">
                <HBox.margin>
                   <Insets left="50.0" />
                </HBox.margin>
