--- a/Assignment1/src/View/VinylListView.fxml
+++ b/Assignment1/src/View/VinylListView.fxml
@@ -7,18 +7,17 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.VinylListController">
    <children>
       <HBox prefHeight="414.0" prefWidth="600.0">
          <children>
-            <TableView prefHeight="401.0" prefWidth="606.0">
+            <TableView fx:id="tableView" prefHeight="401.0" prefWidth="606.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Titel" />
-                <TableColumn prefWidth="75.0" text="Artist" />
-                  <TableColumn prefWidth="90.4000244140625" text="Release Year" />
-                  <TableColumn prefWidth="59.99993896484375" text="Status" />
-                  <TableColumn prefWidth="75.0" text="Reserved ID" />
+                <TableColumn fx:id="titelTableView" prefWidth="75.0" text="Titel" />
+                <TableColumn fx:id="artistTableView" prefWidth="75.0" text="Artist" />
+                  <TableColumn fx:id="releaseYearTableView" prefWidth="90.4000244140625" text="Release Year" />
+                  <TableColumn fx:id="statusTableView" prefWidth="59.99993896484375" text="Status" />
+                  <TableColumn fx:id="reservedIdTableView" prefWidth="75.0" text="Reserved ID" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -28,27 +27,27 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" text="Add Vinyl">
+            <Button fx:id="addVinylButton" mnemonicParsing="false" text="Add Vinyl">
                <HBox.margin>
                   <Insets left="100.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Remove Vinyl">
+            <Button fx:id="removeVinylButton" mnemonicParsing="false" text="Remove Vinyl">
                <HBox.margin>
                   <Insets left="10.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Borrow">
+            <Button fx:id="borrowButton" mnemonicParsing="false" text="Borrow">
                <HBox.margin>
                   <Insets left="100.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Reserve">
+            <Button fx:id="reserveButton" mnemonicParsing="false" text="Reserve">
                <HBox.margin>
                   <Insets left="10.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Return">
+            <Button fx:id="returnButton" mnemonicParsing="false" text="Return">
                <HBox.margin>
                   <Insets left="10.0" top="5.0" />
                </HBox.margin>
