--- a/Assignment1.pt2/src/View/VinylListView.fxml
+++ b/Assignment1.pt2/src/View/VinylListView.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -17,7 +19,8 @@
                         <TableColumn fx:id="artistColumn" prefWidth="75.0" text="Artist" />
                         <TableColumn fx:id="releaseYearColumn" prefWidth="90.4000244140625" text="Release Year" />
                         <TableColumn fx:id="statusColumn" prefWidth="59.99993896484375" text="Status" />
-                        <TableColumn prefWidth="75.0" text="Reserved ID" />
+                        <TableColumn fx:id="ReservedId" prefWidth="75.0" text="Reserved ID" />
+                  <TableColumn fx:id="BorrowedId" prefWidth="75.0" text="Borrowed ID" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -47,6 +50,21 @@
                         <Insets left="10.0" top="5.0" />
                     </HBox.margin>
                 </Button>
+            <Label fx:id="IdLabel" prefHeight="24.0" prefWidth="41.0" text="ID">
+               <HBox.margin>
+                  <Insets left="20.0" top="5.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="IdTextField" prefHeight="25.0" prefWidth="72.0" promptText="User ID">
+               <HBox.margin>
+                  <Insets left="10.0" top="5.0" />
+               </HBox.margin>
+            </TextField>
+            <Button fx:id="LogInButton" mnemonicParsing="false" onAction="#onLogInButtonPressed" text="LOG IN">
+               <HBox.margin>
+                  <Insets left="10.0" top="5.0" />
+               </HBox.margin>
+            </Button>
             </children>
         </HBox>
     </children>
